@@ -104,7 +104,7 @@ def mirror():
 
 
 def fetch():
-    """Get ChangeLog.txt file size and count upgraded packages
+    """Get ChangeLog.txt file size and counts upgraded packages
     """
     mir, r, slackpkg_last_date = mirror(), "", ""
     count, upgraded = 0, []
@@ -122,9 +122,13 @@ def fetch():
     for line in r.splitlines():
         if slackpkg_last_date == line.strip():
             break
-        if (line.endswith("Upgraded.") or line.endswith("Rebuilt.") or
-                line.endswith("Added.")):
+        if (line.endswith("z:  Upgraded.") or line.endswith("z:  Rebuilt.") or
+                line.endswith("z:  Added.") or line.endswith("z:  Removed.")):
             upgraded.append(line.split("/")[-1])
+            count += 1
+        if (line.endswith("*:  Upgraded.") or line.endswith("*:  Rebuilt.") or
+                line.endswith("*:  Added.") or line.endswith("*:  Removed.")):
+            upgraded.append(line)
             count += 1
     return [count, upgraded]
 
